mType/tests/testFiles/class/error/classExtendsInterface.mt
// Error test: Class cannot extend an interface
// This should throw an InheritanceException

interface A {
}

class B extends A {
}
